Banner, Logo, Coupon & CRUD, price validation

--- a/Public/userAssets/css/maind134.css
+++ b/Public/userAssets/css/maind134.css
@@ -7397,6 +7397,7 @@ span.fi-rs-apps {
   width: 34px;
   height: 34px;
   display: block;
+  background-color: #c8e3d2;
   border-radius: 4px;
   color: #696969;
   line-height: 34px;
