--- a/Views/Admin/adminDashboard.ejs
+++ b/Views/Admin/adminDashboard.ejs
@@ -36,6 +36,16 @@
                     </a>
                 </li>
                 <li class="menu-item">
+                    <a class="menu-link" href="/admin/adminReturnReq"> <i class="icon material-icons md-request_quote"></i>
+                        <span class="text">Return Request</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/adminBanner"> <i class="icon material-icons md-ad_units"></i>
+                        <span class="text">Banner</span>
+                    </a>
+                </li>
+                <li class="menu-item">
                     <li class="menu-item">
                         <a class="menu-link" href="/admin/adminUser"> <i class="icon material-icons md-account_circle"></i>
                             <span class="text">User</span></a>
@@ -48,7 +58,8 @@
                     <div class="submenu">
                         <a href="/admin/adminAddProduct">Add product</a>
                         <a href="/admin/getAdminCategories">Add Categories</a>
-                        <a href="/admin/adminAddCoupon">Add Coupon</a>
+                        <a href="/admin/adminCoupon">Add Coupon</a>
+                        <a href="/admin/adminCoupon">Add Offers</a>
                         <a href="/admin/adminAddBanner">Add Banner</a>
                     </div>
                 </li>
