--- a/Views/Partials/userHeader.ejs
+++ b/Views/Partials/userHeader.ejs
@@ -67,11 +67,14 @@
             </div>
         </div>
         <!-- Logo & Cart -->
-        <div class="header-middle header-middle-ptb-1 d-none d-lg-block">
+        <div class="header-middle d-none d-lg-block">
             <div class="container">
                 <div class="header-wrap">
-                    <div class="logo logo-width-1">
-                        <a href="/"><img src="/userAssets/imgs/theme/logo.svg" alt="logo"></a>
+                    <div class="">
+                        <a href="/"><img src="../../Public/userAssets/imgs/Logo/Televisao Logo.png" alt="logo"style="
+                            width:100px;
+                            height: 100px;
+                        "></a>
                     </div>
                     <div class="header-right">
                         <div class="search-style-2">
