--- a/Views/User/user-orderView.ejs
+++ b/Views/User/user-orderView.ejs
@@ -203,12 +203,12 @@
                         })
                     
                         .then((data)=>{
-                            console.log('Status updated',data);
+                            console.log(data);
                         
                             Swal.fire({
                                 position : 'top-center',
                                 icon : 'success',
-                                title : 'Order returned successfullly',
+                                title : 'Order return request send',
                                 showConfirmButton: false,
                                 timer: 1500
                             })
