--- a/Views/Admin/adminOrders.ejs
+++ b/Views/Admin/adminOrders.ejs
@@ -213,18 +213,30 @@
                     </div> <!-- table-responsive //end -->
                 </div> <!-- card-body end// -->
             </div> <!-- card end// -->
-            <div class="pagination-area mt-15 mb-50">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-start">
-                        <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                        <li class="page-item"><a class="page-link" href="#">02</a></li>
-                        <li class="page-item"><a class="page-link" href="#">03</a></li>
-                        <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                        <li class="page-item"><a class="page-link" href="#">16</a></li>
-                        <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li>
-                    </ul>
-                </nav>
+            
+            <!--pagination-->
+            <div class="pagination-area mt-15 mb-sm-5 mb-lg-0">
+                <div aria-label="Page navigation example">
+                    <div class="pagination justify-content-start">
+                        <ul class="pagination justify-content-start">
+                            <% for (let i = 1; i <= totalPages; i++) { %>
+                                <% if (i == page) { %>
+                                <li class="page-item active">
+                                    <a class="page-link"><%= i %></a>
+                                </li>
+                                <% } else { %>
+                                <li class="page-item">
+                                    <a href="?page=<%= i %>" class="page-link">
+                                        <%= i %> 
+                                    </a>
+                                </li>
+                                <% } %>
+                            <% } %>
+                        </ul>
+                    </div>
+                </div>
             </div>
+
         </section> <!-- content-main end// -->
         <footer class="main-footer font-xs">
             <div class="row pb-30 pt-15">
