--- a/Views/Admin/adminProducts.ejs
+++ b/Views/Admin/adminProducts.ejs
@@ -220,20 +220,11 @@
                                     <div class=" col-lg-6 price mt-1" style="color: #a3a3a3; text-decoration: line-through;">₹ <%= product[i].productPromoPrice %></div> <!-- price-wrap.// -->
                                 </div>
                             </div>
-                        </div> <!-- card-product  end// -->
-                    </div> <!-- col.// -->
+                        </div> <!-- card-product  end -->
+                    </div>
                     <% } %>
-            </div> <!-- row.// -->
+            </div> <!-- row -->
 
-            <div class="pagination-area mt-15 mb-50">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-start">
-                        <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                        <li class="page-item"><a class="page-link" href="#">02</a></li>
-                        <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li>
-                    </ul>
-                </nav>
-            </div>
 
         </section> <!-- content-main end// -->
 
