--- a/Views/User/homePage.ejs
+++ b/Views/User/homePage.ejs
@@ -35,68 +35,28 @@
         
         <section class="home-slider position-relative pt-50">
             <div class="hero-slider-1 dot-style-1 dot-style-1-position-1">
-
-                <div class="single-hero-slider single-animation-wrap">
-                    <div class="container">
-                        <div class="row align-items-center slider-animated-1">
-                            <div class="col-lg-5 col-md-6">
-                                <div class="hero-slider-content-2">
-                                    <h4 class="animated">Trade-in offer</h4>
-                                    <h2 class="animated fw-900">Supper value deals</h2>
-                                    <h1 class="animated fw-900 text-brand">On Samsung products</h1>
-                                    <p class="animated">Save more with coupons & up to 70% off</p>
-                                    <a class="animated btn btn-brush btn-brush-3" href="/allCategory"> Shop Now </a>
+                <% Banners.forEach((banner)=>{ %>
+                    <div class="single-hero-slider single-animation-wrap">
+                        <div class="container">
+                            <div class="row align-items-center slider-animated-1">
+                                <div class="col-lg-5 col-md-6">
+                                    <div class="hero-slider-content-2">
+                                        <h4 class="animated"><%= banner.offerType %></h4>
+                                        <h2 class="animated fw-900"><%= banner.subTitle %></h2>
+                                        <h1 class="animated fw-900 text-brand"><%= banner.mainTitle %></h1>
+                                        <p class="animated"><%= banner.offers %></p>
+                                        <a class="animated btn btn-brush btn-brush-3" href="/allCategory"> Shop Now </a>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-lg-7 col-md-6">
-                                <div class="single-slider-img single-slider-img-1">
-                                    <img class="animated slider-1-1" src="../../Public/userAssets/imgs/banner/banner-1.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="single-hero-slider single-animation-wrap">
-                    <div class="container">
-                        <div class="row align-items-center slider-animated-1">
-                            <div class="col-lg-5 col-md-6">
-                                <div class="hero-slider-content-2">
-                                    <h4 class="animated">Hot promotions</h4>
-                                    <h2 class="animated fw-900">Watch your dreams</h2>
-                                    <h1 class="animated fw-900 text-7">Great Collection</h1>
-                                    <p class="animated">Save more with coupons & up to 40% off</p>
-                                    <a class="animated btn btn-brush btn-brush-2" href="/allCateogry"> Discover Now </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-7 col-md-6">
-                                <div class="single-slider-img single-slider-img-1">
-                                    <img class="animated slider-1-2" src="../../Public/userAssets/imgs/banner/banner-2.png" alt="">
+                                <div class="col-lg-7 col-md-6">
+                                    <div class="single-slider-img single-slider-img-1">
+                                        <img class="animated slider-1-1" src="<%= banner.image[0].path %>" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="single-hero-slider single-animation-wrap">
-                    <div class="container">
-                        <div class="row align-items-center slider-animated-1">
-                            <div class="col-lg-5 col-md-6">
-                                <div class="hero-slider-content-2">
-                                    <h4 class="animated">Upcoming Offer</h4>
-                                    <h2 class="animated fw-900">Big Deals From</h2>
-                                    <h1 class="animated fw-900 text-8">Manufacturer</h1>
-                                    <p class="animated">Buy from Televisão...</p>
-                                    <a class="animated btn btn-brush btn-brush-1" href="allCateogry"> Shop Now </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-7 col-md-6">
-                                <div class="single-slider-img single-slider-img-1">
-                                    <img class="animated slider-1-3" src="../../Public/userAssets/imgs/banner/banner-3.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <% }) %>
             </div>
             <div class="slider-arrow hero-slider-1-arrow"></div>
         </section>
