--- a/Views/User/user-allCategory.ejs
+++ b/Views/User/user-allCategory.ejs
@@ -57,16 +57,25 @@
                         </div>
                         <!--pagination-->
                         <div class="pagination-area mt-15 mb-sm-5 mb-lg-0">
-                            <nav aria-label="Page navigation example">
-                                <ul class="pagination justify-content-start">
-                                    <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">02</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">03</a></li>
-                                    <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">16</a></li>
-                                    <li class="page-item"><a class="page-link" href="#"><i class="fi-rs-angle-double-small-right"></i></a></li>
-                                </ul>
-                            </nav>
+                            <div aria-label="Page navigation example">
+                                <div class="pagination justify-content-start">
+                                    <ul class="pagination justify-content-start">
+                                        <% for (let i = 1; i <= totalPages; i++) { %>
+                                            <% if (i == page) { %>
+                                            <li class="page-item active">
+                                                <a class="page-link"><%= i %></a>
+                                            </li>
+                                            <% } else { %>
+                                            <li class="page-item">
+                                                <a href="?page=<%= i %>" class="page-link">
+                                                    <%= i %> 
+                                                </a>
+                                            </li>
+                                            <% } %>
+                                        <% } %>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!-- sidebar -->
