Coupon in payment side, offer CRUD,discount added

--- a/Views/Admin/adminDashboard.ejs
+++ b/Views/Admin/adminDashboard.ejs
@@ -46,6 +46,16 @@
                     </a>
                 </li>
                 <li class="menu-item">
+                    <a class="menu-link" href="/admin/adminCoupon"> <i class="icon material-icons md-payments"></i>
+                        <span class="text">Coupon</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/adminOffers"> <i class="icon material-icons md-card_membership"></i>
+                        <span class="text">Offers</span>
+                    </a>
+                </li>
+                <li class="menu-item">
                     <li class="menu-item">
                         <a class="menu-link" href="/admin/adminUser"> <i class="icon material-icons md-account_circle"></i>
                             <span class="text">User</span></a>
