--- a/Views/User/user-profile.ejs
+++ b/Views/User/user-profile.ejs
@@ -245,7 +245,7 @@
                                     <div class="tab-pane fade" id="wallet" role="tabpanel" aria-labelledby="wallet-tab">
                                     <div class="card">
                                         <div class="card-header">
-                                            <h5 class="mb-0 text-brand">Wellets</h5>
+                                            <h5 class="mb-0 text-brand">Wallets</h5>
                                         </div>
                                         <div class="card-body">
                                             <div class="wallet-box" style="display: flex; align-items: center; flex-direction: column;">
